0.502 2023-11-23
  [New Features]
    * Add the _putenv_s method to the Sys::Env class.
    * Add the set_env method to the Sys class.
    * Add the alarm method to the Sys class.
    * The kill method in the Sys class can be used in Windows if $pid is equal to the current process id.
    * Add the utimes method to the Sys::IO class.
  [Incompatible Changes]
    * Remove the Sys::FileTest class.
    * Remove throwing exceptions in the ualarm method in the Sys::Signal class.
    * Remove the signal_go method in the Sys::Signal class.
    * The getgroups method in the Sys::User class is changed.
      [Before]
      static method getgroups : int[] ();
      [After]
      static method getgroups : int ($size : int, $list : int[]);
    * The definition of the pipe method in the Sys is changed.
      [Before]
      static method pipe : void ($pipe_fds : int[]);
      
      [After]
      static method pipe : void ($read_fd_ref : int*, $write_fd_ref : int*);
      
  [Bug Fix with Incompatible Changes]
    * The S method in the Sys class returns 0 if the file do not exists.
0.501 2023-11-23
  [Incompatible Changes]
     * The return type of the following methods in the Sys become void.
      chdir
      chmod
      mkdir
      rmdir
      opendir
      closedir
      close
      unlink
      rename
      bind
      listen
      connect
      shutdown
      socketpair
      setsockopt
      truncate
      flock
      print
      say
      printf
      seek
      utime
      chown
      open
      fdopen
      sysopen
      say
      kill
      pipe
       

0.500 2023-11-17
  [New Features and Incompatible Changes]
    * Rename the SIG_IO method in the Sys::Signal class is renamed to SIG_GO.
    * Change the signal_io method in the Sys::Signal class is renamed to signal_go.
      [Before]
      static method signal_io : Sys::Signal::Handler ($signum : int, $fd : int);
      [After]
      static method signal_go : Sys::Signal::Handler ($signum : int);
      