@@ -9,14 +9,18 @@
 static const char* FILE_NAME = "Sys/Time/Timeval.c";
 
 int32_t SPVM__Sys__Time__Timeval__new(SPVM_ENV* env, SPVM_VALUE* stack) {
-
+  
   int32_t error_id = 0;
   
   struct timeval* st_tv = env->new_memory_block(env, stack, sizeof(struct timeval));
   
+  st_tv->tv_sec = stack[0].lval;
+  
+  st_tv->tv_usec = stack[1].lval;
+  
   void* obj_tv = env->new_pointer_object_by_name(env, stack, "Sys::Time::Timeval", st_tv, &error_id, __func__, FILE_NAME, __LINE__);
   if (error_id) { return error_id; }
-
+  
   stack[0].oval = obj_tv;
   
   return 0;
