@@ -5,6 +5,7 @@
     * Add the alarm method to the Sys class.
     * The kill method in the Sys class can be used in Windows if $pid is equal to the current process id.
     * Add the utimes method to the Sys::IO class.
+    * Add the optional $tv_sec and $tv_usec arguments to the new method in the Sys::Time::Timeval.
   [Incompatible Changes]
     * Remove the Sys::FileTest class.
     * Remove throwing exceptions in the ualarm method in the Sys::Signal class.
